@@ -1,7 +1,10 @@
+import org.gradle.internal.impldep.org.eclipse.jgit.lib.ObjectChecker.type
+
 plugins {
     java
     id("org.springframework.boot") version "3.4.3"
     id("io.spring.dependency-management") version "1.1.7"
+    id("jacoco")
 }
 
 group = "ucr.sa"
@@ -12,6 +15,7 @@ java {
         languageVersion = JavaLanguageVersion.of(21)
     }
 }
+
 repositories {
     mavenCentral()
 }
@@ -21,18 +25,21 @@ extra["springCloudVersion"] = "2024.0.0"
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
-
     implementation("org.springframework.cloud:spring-cloud-starter-feign:1.4.7.RELEASE")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-
     implementation("org.liquibase:liquibase-core")
     runtimeOnly("org.postgresql:postgresql")
-
     implementation("org.springframework.security:spring-security-crypto:6.2.2")
     implementation("io.jsonwebtoken:jjwt:0.12.5")
     implementation("javax.xml.bind:jaxb-api:2.3.0")
-    testImplementation("org.springframework.boot:spring-boot-starter-test")
 
+    testImplementation("org.junit.jupiter:junit-jupiter:5.10.0")
+    testImplementation("org.mockito:mockito-core:5.12.0")
+    testImplementation("org.mockito:mockito-junit-jupiter:5.12.0")
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testImplementation("io.cucumber:cucumber-java:7.14.0")
+    testImplementation("io.cucumber:cucumber-spring:7.14.0")
+    testImplementation("io.cucumber:cucumber-junit-platform-engine:7.14.0")
 }
 
 dependencyManagement {
@@ -43,4 +50,25 @@ dependencyManagement {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs = listOf("-XX:+EnableDynamicAgentLoading")
+
+    tasks.test {
+        finalizedBy(tasks.jacocoTestReport)
+    }
+    tasks.jacocoTestReport {
+        dependsOn(tasks.test)
+    }
+}
+
+jacoco {
+    toolVersion = "0.8.13"
+    reportsDirectory = layout.buildDirectory.dir("customJacocoReportDir")
+}
+
+tasks.jacocoTestReport {
+    reports {
+        xml.required = false
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir("jacocoHtml")
+    }
 }
